# webuntis_cli

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  _config.yml  config.ini.dist  pyproject.toml  release.sh  requirements.txt  setup.py
webuntis_cli/: __init__.py  __main__.py  run.py
