[tool.poetry]
name = "webuntis-cli"
# must be changed in __init__.py as well
version = "0.6.6"
description = "WebUntis CLI"
authors = ["Marco Bakera <marco@bakera.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://tbs1-bo.github.io/webuntis_cli/"
keywords = ["cli", "untis", "stundenplan", "timetable"]
classifiers = [
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        'Development Status :: 5 - Production/Stable',

        # Indicate who your project is intended for
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Education',
        'Topic :: Education',

        # Pick your license as you wish (should match "license" above)
        'License :: OSI Approved :: MIT License',

        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        # 'Programming Language :: Python :: 2',
        # 'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        # 'Programming Language :: Python :: 3.3',
        # 'Programming Language :: Python :: 3.4',
        # 'Programming Language :: Python :: 3.5',

]

[tool.poetry.dependencies]
python = "^3.8"
webuntis = "^0.1.11"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[tool.poetry.scripts]
webuntis-cli = "webuntis_cli.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
